# python-readenv

./: .hgignore  .hgtags  AUTHORS  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  mypy.ini  noxfile.py  pyproject.toml  requirements.in  requirements.txt  setup.py
readenv/: __init__.py  _environ.py  _version.py  converters.py  env.py  loads.py  mypy.py  readenv.py  typing38.py  typing39.py  version.py
requirements/: requirements-3.10.txt  requirements-3.11.txt  requirements-3.12.txt  requirements-3.8.txt  requirements-3.9.txt
tests/: test.env  test_converters.py  test_read.py  utils.py
