[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "python-readenv"
description = "read an env file and export to os.environ"
authors = [
    {name = "Raffaele Salmaso", email = "raffaele.salmaso@gmail.com"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["env", "envvar", "environ", "environment", "environment variable"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []
dynamic = [
    "version",
]

[project.urls]
"Home Page" = "https://pypi.org/project/python-readenv/"
Documentation = "https://github.com/rsalmaso/python-readenv/blob/main/README.md"
GitHub = "https://github.com/rsalmaso/python-readenv"
Changelog = "https://github.com/rsalmaso/python-readenv/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/rsalmaso/python-readenv/discussions"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "nox[uv]>=2025.2.9",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.uv]
# Ensure Nox always gets a fresh package.
reinstall-package = ["python-readenv"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "readenv.__version__"}

[tool.distutils.bdist_wheel]
universal = false

[tool.ruff]
exclude = [
]
line-length = 120
target-version = "py38"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
ignore = [
    "B018", # Found useless expression. Either assign it to a variable or remove it.
    "B026", # Star-arg unpacking after a keyword argument is strongly discouraged
    "B904", # Within an except clause, raise exceptions with raise ... from err or raise ... from None to
            # distinguish them from errors in exception handling.
    "B905", # zip() without an explicit strict= parameter set. strict=True causes the resulting iterator
            # to raise a ValueError if the arguments are exhausted at differing lengths.
    "E722", # Do not use bare except, specify exception instead
]
fixable = [
    "I",
]
unfixable = [
    "F401", # don't remove unused import
]
select = [
    "B", # flake8-bugbear
    "C9", # mccabe
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "Q",
    "W", # pycodestyle
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = false
force-sort-within-sections = true
force-wrap-aliases = true
known-first-party = [
    "readenv",
]
known-third-party = [
]
order-by-type = false

[tool.ruff.lint.mccabe]
max-complexity = 18
